fixed spacing issues

--- a/src/Components/Landing/Landing.css
+++ b/src/Components/Landing/Landing.css
@@ -123,6 +123,7 @@
 /* RESPONSIVENESS */
 @media screen and (max-width: 768px) {
   .landing .landing-container {
+    margin: 150px 0px;
     padding: 0 30px;
   }
 
